--- a/styles/style.css
+++ b/styles/style.css
@@ -6,18 +6,30 @@
 }
 
 body {
-    height: 100vh;
     box-sizing:border-box;
     background-color:#000000;
     color:#ffffff;
 }
 
-.titulo-destaque {
+.cabecalho {
+    padding: 2% 0% 0% 15%;
+}
+
+.cabecalho__menu {
+    display: flex;
+    gap: 80px;
+}
+
+.cabecalho__menu__link {
     color: #22d4fd;
+    font-family: 'Montserrat' sans-serif;
+    font-size: 24px;
+    font-weight: 600;
+    text-decoration: none;
 }
 
 .apresentacao {
-    margin: 10% 15%;
+    padding: 5% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -35,6 +47,10 @@ body {
     font-family: 'Krona One', sans-serif;
 }
 
+.titulo-destaque {
+    color: #22d4fd;
+}
+
 .apresentacao__conteudo__texto {
     font-size: 24px;
     font-family: 'Montserrat', sans-serif;
@@ -42,18 +58,45 @@ body {
 
 .apresentacao__links {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: space-between;
+    gap: 32px;
+}
+
+.apresentacao__links__subtitulo {
+    font-family: 'Krona One' , 'sans-serif';
+    font-weight: 400;
+    font-size: 24px;
+
 }
 
 .apresentacao__links__link {
-    background-color: #22d4fd;
-    width: 280px;
+
+    justify-content: center;
+    display: flex;
+    gap: 16px;
+    width: 378px;
     text-align: center;
-    border-radius: 16px;
+    border-radius: 8px;
     font-size: 24px;
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
-    color: #000000;
+    color: #f6f6f6;
     font-family: 'Montserrat', sans-serif;
+    border: 2px solid #22d4fd;
+}
+
+.apresentacao__links__link:hover {
+    background-color: #272727;
+}
+
+.rodape {
+    color: #000000;
+    background-color: #22d4fd;
+    padding: 24px;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 24px;
 }
