--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&%display=swap');
 
+:root {
+    --cor-primaria: #191825;
+    --cor-secundaria: #F8EDFF;
+    --cor-terciaria: #525CEB;
+    --cor-hover: #865DFF;
+
+    --fonte-primaria: 'Krona One', sans-serif;
+    --fonte-secundaria: 'Montserrat' sans-serif;
+}
 *{
     margin: 0;
     padding: 0;
@@ -7,8 +16,8 @@
 
 body {
     box-sizing:border-box;
-    background-color:#000000;
-    color:#ffffff;
+    background-color:var(--cor-primaria);
+    color:var(--cor-secundaria);
 }
 
 .cabecalho {
@@ -21,9 +30,9 @@ body {
 }
 
 .cabecalho__menu__link {
-    color: #22d4fd;
-    font-family: 'Montserrat' sans-serif;
-    font-size: 24px;
+    color: var(--cor-terciaria);
+    font-family: var(--fonte-secundaria);
+    font-size: 1.5rem;
     font-weight: 600;
     text-decoration: none;
 }
@@ -43,17 +52,17 @@ body {
 }
 
 .apresentaçao__conteudo__titulo {
-    font-size: 36px;
-    font-family: 'Krona One', sans-serif;
+    font-size: 2.25rem;
+    font-family: var(--fonte-primaria);
 }
 
 .titulo-destaque {
-    color: #22d4fd;
+    color: var(--cor-terciaria);
 }
 
 .apresentacao__conteudo__texto {
-    font-size: 24px;
-    font-family: 'Montserrat', sans-serif;
+    font-size: 1.5rem;
+    font-family: var(--fonte-secundaria);
 }
 
 .apresentacao__links {
@@ -65,9 +74,9 @@ body {
 }
 
 .apresentacao__links__subtitulo {
-    font-family: 'Krona One' , 'sans-serif';
+    font-family: var(--fonte-primaria);
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.5rem;
 
 }
 
@@ -79,24 +88,28 @@ body {
     width: 378px;
     text-align: center;
     border-radius: 8px;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
-    color: #f6f6f6;
-    font-family: 'Montserrat', sans-serif;
-    border: 2px solid #22d4fd;
+    color: var(--cor-secundaria);
+    font-family: var(--fonte-secundaria);
+    border: 2px solid var(--cor-terciaria);
 }
 
 .apresentacao__links__link:hover {
-    background-color: #272727;
+    background-color: var(--cor-hover);
+}
+
+.apresentacao__imagem{
+    width: 30%;
 }
 
 .rodape {
-    color: #000000;
-    background-color: #22d4fd;
+    color: var(--cor-primaria);
+    background-color: var(--cor-terciaria);
     padding: 24px;
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 24px;
+    font-family: var(--fonte-secundaria);
+    font-size: 1.5rem;
 }
